@@ -65,7 +65,6 @@ public class FetchBoxFilesInFolderTest extends AbstractBoxFileTest implements Fi
     void testFetchMetadataFromFolderWithFolderIdProperty() {
         testRunner.setProperty(FetchBoxFilesInFolder.FOLDER_ID, TEST_FOLDER_ID);
         testRunner.setProperty(FetchBoxFilesInFolder.RECURSIVE_SEARCH, "false");
-        testRunner.setProperty(FetchBoxFilesInFolder.BATCH_SIZE, "100");
 
         final List<String> pathParts = Arrays.asList("path", "to", "file");
         mockFetchedFileList(TEST_FILE_ID, TEST_FILENAME, pathParts, TEST_SIZE, CREATED_TIME, MODIFIED_TIME);
@@ -94,7 +93,6 @@ public class FetchBoxFilesInFolderTest extends AbstractBoxFileTest implements Fi
     void testFetchMetadataFromFolderWithFolderIdAttributeExpression() {
         testRunner.setProperty(FetchBoxFilesInFolder.FOLDER_ID, "${box.folder.id}");
         testRunner.setProperty(FetchBoxFilesInFolder.RECURSIVE_SEARCH, "true");
-        testRunner.setProperty(FetchBoxFilesInFolder.BATCH_SIZE, "100");
 
         final List<String> pathParts = Arrays.asList("path", "to", "file");
         mockFetchedFileList(TEST_FILE_ID, TEST_FILENAME, pathParts, TEST_SIZE, CREATED_TIME, MODIFIED_TIME);
@@ -123,24 +121,25 @@ public class FetchBoxFilesInFolderTest extends AbstractBoxFileTest implements Fi
     }
 
     @Test
-    void testBatchingWithMultipleFiles() {
+    void testProcessingMultipleFiles() {
         testRunner.setProperty(FetchBoxFilesInFolder.FOLDER_ID, TEST_FOLDER_ID);
         testRunner.setProperty(FetchBoxFilesInFolder.RECURSIVE_SEARCH, "false");
-        testRunner.setProperty(FetchBoxFilesInFolder.BATCH_SIZE, "2");
         mockMultipleFilesResponse();
 
         testRunner.enqueue("test file");
         testRunner.run();
 
-        testRunner.assertTransferCount(FetchBoxFilesInFolder.REL_SUCCESS, 2);
+        testRunner.assertTransferCount(FetchBoxFilesInFolder.REL_SUCCESS, 1);
         testRunner.assertTransferCount(FetchBoxFilesInFolder.REL_FAILURE, 0);
 
         final List<MockFlowFile> successFiles = testRunner.getFlowFilesForRelationship(FetchBoxFilesInFolder.REL_SUCCESS);
-
-        final MockFlowFile batch1 = successFiles.get(0);
-        batch1.assertAttributeEquals("record.count", "2");
-        final MockFlowFile batch2 = successFiles.get(1);
-        batch2.assertAttributeEquals("record.count", "1");
+        final MockFlowFile outputFlowFile = successFiles.getFirst();
+        outputFlowFile.assertAttributeEquals("record.count", "3");
+        outputFlowFile.assertAttributeEquals("box.folder.id", TEST_FOLDER_ID);
+        final String content = new String(outputFlowFile.toByteArray());
+        assertTrue(content.contains(TEST_FILE_ID + "1"));
+        assertTrue(content.contains(TEST_FILE_ID + "2"));
+        assertTrue(content.contains(TEST_FILE_ID + "3"));
     }
 
     @Test
@@ -167,7 +166,7 @@ public class FetchBoxFilesInFolderTest extends AbstractBoxFileTest implements Fi
         testRunner.assertTransferCount(FetchBoxFilesInFolder.REL_SUCCESS, 0);
 
         final List<MockFlowFile> failureFiles = testRunner.getFlowFilesForRelationship(FetchBoxFilesInFolder.REL_FAILURE);
-        final MockFlowFile failureFlowFile = failureFiles.get(0);
+        final MockFlowFile failureFlowFile = failureFiles.getFirst();
         failureFlowFile.assertAttributeEquals(BoxFileAttributes.ERROR_CODE, "404");
         failureFlowFile.assertAttributeExists(ERROR_MESSAGE);
     }
